public/css/styles.css
/* ... */
.pt-4 {
  padding-top: 1rem;
}

.pt-12 {
  padding-top: 3rem;
}

.pb-8 {
  padding-bottom: 2rem;
}

.pt-2 {
  padding-top: 0.5rem;
}

.pb-10 {
  padding-bottom: 2.5rem;
}

.pt-3 {
  padding-top: 0.75rem;
}

.pr-2 {
  padding-right: 0.5rem;
}

.pl-1 {
  padding-left: 0.25rem;
}

.pr-5 {
  padding-right: 1.25rem;
}

.pr-4 {
  padding-right: 1rem;
}

.pb-16 {
  padding-bottom: 4rem;
}

.pt-32 {
  padding-top: 8rem;
}

.pb-2 {
  padding-bottom: 0.5rem;
}

.pt-14 {
  padding-top: 3.5rem;
}

.pt-\[0\.10rem\] {
  padding-top: 0.10rem;
}

.pl-9 {
  padding-left: 2.25rem;
}

.pt-20 {
  padding-top: 5rem;
}

.pl-2 {
  padding-left: 0.5rem;
}

.pl-5 {
  padding-left: 1.25rem;
}

.pb-7 {
  padding-bottom: 1.75rem;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.font-sourceSansPro {
  font-family: 'Source Sans Pro', Arial, sans-serif;;
}

.font-openSans {
  font-family: 'Open Sans', Arial, sans-serif;
}

.text-\[1\.05rem\] {
  font-size: 1.05rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-\[48px\] {
  font-size: 48px;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-\[0\.75rem\] {
  font-size: 0.75rem;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-4xl {
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.font-semibold {
  font-weight: 600;
}

.font-extrabold {
  font-weight: 800;
}

.font-light {
  font-weight: 300;
}

.font-medium {
  font-weight: 500;
}

.font-bold {
  font-weight: 700;
}

.uppercase {
  text-transform: uppercase;
}

.tracking-widest {
  letter-spacing: 0.1em;
}

.text-\[\#f54399\] {
  --tw-text-opacity: 1;
  color: rgba(245, 67, 153, var(--tw-text-opacity));
}

.text-gray-600 {
  --tw-text-opacity: 1;
  color: rgba(75, 85, 99, var(--tw-text-opacity));
}

.text-gray-200 {
  --tw-text-opacity: 1;
  color: rgba(229, 231, 235, var(--tw-text-opacity));
}

.text-gray-700 {
  --tw-text-opacity: 1;
  color: rgba(55, 65, 81, var(--tw-text-opacity));
}

.text-gray-300 {
  --tw-text-opacity: 1;
  color: rgba(209, 213, 219, var(--tw-text-opacity));
}

.text-\[\#E23B8B\] {
  --tw-text-opacity: 1;
  color: rgba(226, 59, 139, var(--tw-text-opacity));
}

.text-logo-purple {
  --tw-text-opacity: 1;
  color: rgba(182, 52, 233, var(--tw-text-opacity));
}

.text-gold {
  --tw-text-opacity: 1;
  color: rgba(210, 172, 74, var(--tw-text-opacity));
}

.text-transparent {
  color: transparent;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.text-gray-400 {
  --tw-text-opacity: 1;
  color: rgba(156, 163, 175, var(--tw-text-opacity));
}

.text-gray-50 {
  --tw-text-opacity: 1;
  color: rgba(249, 250, 251, var(--tw-text-opacity));
}

.text-gray-100 {
  --tw-text-opacity: 1;
  color: rgba(243, 244, 246, var(--tw-text-opacity));
}

.text-\[\#EB5758\] {
  --tw-text-opacity: 1;
  color: rgba(235, 87, 88, var(--tw-text-opacity));
}

.text-gray-900 {
  --tw-text-opacity: 1;
  color: rgba(17, 24, 39, var(--tw-text-opacity));
}

.text-text-purple {
  --tw-text-opacity: 1;
  color: rgba(152, 97, 255, var(--tw-text-opacity));
}

.text-yellow-400 {
  --tw-text-opacity: 1;
  color: rgba(251, 191, 36, var(--tw-text-opacity));
}

.text-pink-600 {
  --tw-text-opacity: 1;
  color: rgba(219, 39, 119, var(--tw-text-opacity));
}

.text-pink-100 {
  --tw-text-opacity: 1;
  color: rgba(252, 231, 243, var(--tw-text-opacity));
}

.underline {
  text-decoration: underline;
}

.opacity-0 {
  opacity: 0;
}

.shadow-inner {
  --tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.shadow {
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.shadow-md {
  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.blur {
  --tw-blur: blur(8px);
  filter: var(--tw-filter);
}

.blur-sm {
  --tw-blur: blur(4px);
  filter: var(--tw-filter);
}

.drop-shadow-sm {
  --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
  filter: var(--tw-filter);
}

.drop-shadow-lg {
  --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
  filter: var(--tw-filter);
}

.filter {
  filter: var(--tw-filter);
}

.transition {
  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.transition-colors {
  transition-property: background-color, border-color, color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.transition-all {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.duration-200 {
  transition-duration: 200ms;
}

.duration-300 {
  transition-duration: 300ms;
}

.duration-100 {
  transition-duration: 100ms;
}

.duration-\[2000ms\] {
  transition-duration: 2000ms;
}

.ease-in-out {
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.ease-linear {
  transition-timing-function: linear;
}

.ease-out {
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
}
/* ... */

